fix(scheduler): Make popover width even so it's not blurry

--- a/internal_packages/composer-scheduler/stylesheets/scheduler.less
+++ b/internal_packages/composer-scheduler/stylesheets/scheduler.less
@@ -28,7 +28,7 @@
 }
 
 .scheduler-picker {
-  min-width: 185px;
+  min-width: 186px;
 }
 
 .new-event-card-container {
